# milanity

Internet_speed_checker/: .gitignore  config.py  database.py  db.sql  logger.py  main.py  monitor.py
Learning/: array  array.cpp  deque  deque.cpp  libraries.cpp  list  list.cpp  map  map.cpp  mmap  mmap.cpp  multiset  multiset.cpp  pq  pq.cpp  queue  queue.cpp  set  set.cpp  stack  stack.cpp  vector  vector.cpp
Learning/keyword/: methods
flask_internet_speed_checker/: app.py  config.py  database.py  logger.py  monitor.py  requirment.txt
flask_internet_speed_checker/static/: script.js  style.css
flask_internet_speed_checker/templates/: dashboard.html
tasks/basic_cpp/: 1  1.cpp
tasks/learning_phase/base/: client.py  db_connect.py  db_data_Retrive.py  server.py  test.py
tasks/learning_phase/client-server-msg-store/: client.py  db_helper.py  (+1 more)
tasks/modbus_connection/: client.py  server.py
tasks/modbus_logger/: config.json  log.sql  main  main.cpp
tasks/mqtt_tcp_app/: app  app.cpp
tasks/multiple_device/: CMakeLists.txt  README.md  config.json  schema.sql
tasks/multiple_device/include/: Config.h  DatabaseLogger.h  Device.h  ModbusTcpClient.h
tasks/multiple_device/src/: DatabaseLogger.cpp  Device.cpp  ModbusTcpClient.cpp  main.cpp
tasks/realtime_project/: log.sql  main  modbus_logger  project.cpp
tasks/threading/: mqttmsgmultithread.cpp  mqttthread.cpp  msgmultithreads  mthreads  multimqttthread.cpp  multithread.cpp  multithreads  thread  thread.cpp  threads
tasks/two_conn/: config.json  http_io  http_io.cpp  index.html  main.cpp  read.cpp
(+11 files in other folders)
